; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_act_api.c_tcf_hash_search.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_act_api.c_tcf_hash_search.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tc_action = type { %struct.tcf_common*, %struct.TYPE_2__* }
%struct.tcf_common = type { i32 }
%struct.TYPE_2__ = type { %struct.tcf_hashinfo* }
%struct.tcf_hashinfo = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tcf_hash_search(%struct.tc_action* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tc_action*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tcf_hashinfo*, align 8
  %7 = alloca %struct.tcf_common*, align 8
  store %struct.tc_action* %0, %struct.tc_action** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.tc_action*, %struct.tc_action** %4, align 8
  %9 = getelementptr inbounds %struct.tc_action, %struct.tc_action* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.tcf_hashinfo*, %struct.tcf_hashinfo** %11, align 8
  store %struct.tcf_hashinfo* %12, %struct.tcf_hashinfo** %6, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.tcf_hashinfo*, %struct.tcf_hashinfo** %6, align 8
  %15 = call %struct.tcf_common* @tcf_hash_lookup(i32 %13, %struct.tcf_hashinfo* %14)
  store %struct.tcf_common* %15, %struct.tcf_common** %7, align 8
  %16 = load %struct.tcf_common*, %struct.tcf_common** %7, align 8
  %17 = icmp ne %struct.tcf_common* %16, null
  br i1 %17, label %18, label %22

18:                                               ; preds = %2
  %19 = load %struct.tcf_common*, %struct.tcf_common** %7, align 8
  %20 = load %struct.tc_action*, %struct.tc_action** %4, align 8
  %21 = getelementptr inbounds %struct.tc_action, %struct.tc_action* %20, i32 0, i32 0
  store %struct.tcf_common* %19, %struct.tcf_common** %21, align 8
  store i32 1, i32* %3, align 4
  br label %23

22:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %18
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local %struct.tcf_common* @tcf_hash_lookup(i32, %struct.tcf_hashinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
